fix: adjust spacing after code block

--- a/src/app/_components/MarkdownGeneral/MarkdownGeneral.module.css
+++ b/src/app/_components/MarkdownGeneral/MarkdownGeneral.module.css
@@ -13,7 +13,7 @@
 }
 
 .markdown pre {
-  @apply mb-4 !important;
+  @apply mb-8 !important;
 }
 
 .markdown a {
